objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(IsClosed, ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HBC_Commit_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HBC Commit Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_PS_2__c</fullName>
        <label>Test PS 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_PS_3__c</fullName>
        <label>Test PS 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_PS_One__c</fullName>
        <label>Test PS One</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>TEST_QUEUE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>TEST QUEUE</label>
        <queue>TEST_QUEUE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>